<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".reservas.AgregarFechaReservaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoSeleccioneFecha" />

    <EditText
        android:id="@+id/seleccionarFechaReserva"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Toque para elegir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoSeleccioneHora" />

    <Spinner
        android:id="@+id/spinnerReservaHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:onClick="btnEventoAgregarReserva" />

</LinearLayout>